# uefi-rust-os

./: README.md
part1/uefiloader/: Cargo.toml
part2/uefiloader/: Cargo.toml
part2/uefiloader/qemu-testing/: runtest.sh
part2/uefiloader/src/: cfg_table_type.rs  kernel_args.rs  main.rs
part3/uefiloader/: Cargo.toml
part3/uefiloader/qemu-testing/esp/efi/boot/: bootx64.efi
part3/uefiloader/src/: console.rs  framebuffer.rs  identity_acpi_handler.rs  kernel_args.rs  main.rs
uefiloader-wip/: .gitignore  Cargo.toml  test.x  tryit.sh
uefiloader-wip/.cargo/: config.toml
uefiloader-wip/qemu-testing/: runtest.sh
uefiloader-wip/src/: framebuffer.rs  kernel_args.rs  main.rs  paging.rs
